--- a/USER-AUTHENTICATION.vcxproj.filters
+++ b/USER-AUTHENTICATION.vcxproj.filters
@@ -13,75 +13,66 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
-    <Filter Include="Source Files\GAMES">
-      <UniqueIdentifier>{bad01894-36ee-4c75-84e5-9567c40bb8e8}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\GAMES\Battleship">
-      <UniqueIdentifier>{6743fd05-72ef-4e32-80aa-dcca21eab934}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\GAMES\Chess">
+    <Filter Include="Source Files\Chess">
       <UniqueIdentifier>{8ca4567a-074a-4a26-ae9f-7dd995897c77}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Source Files\GAMES\Chess\.h files">
+    <Filter Include="Source Files\Chess\.h files">
       <UniqueIdentifier>{3788848f-2a08-4aeb-a6dc-3a6b5bb56d8f}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Source Files\GAMES\Chess\.cpp files">
+    <Filter Include="Source Files\Chess\.cpp files">
       <UniqueIdentifier>{b2057900-ffa5-4e3d-9885-df00783129a0}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\GAMES\Maze">
-      <UniqueIdentifier>{b27eff71-1546-48fb-acc1-8335c5b71286}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Board.cpp">
-      <Filter>Source Files\GAMES\Chess\.cpp files</Filter>
+      <Filter>Source Files\Chess\.cpp files</Filter>
     </ClCompile>
     <ClCompile Include="Color.cpp">
-      <Filter>Source Files\GAMES\Chess\.cpp files</Filter>
+      <Filter>Source Files\Chess\.cpp files</Filter>
     </ClCompile>
     <ClCompile Include="Move.cpp">
-      <Filter>Source Files\GAMES\Chess\.cpp files</Filter>
+      <Filter>Source Files\Chess\.cpp files</Filter>
     </ClCompile>
     <ClCompile Include="Piece.cpp">
-      <Filter>Source Files\GAMES\Chess\.cpp files</Filter>
+      <Filter>Source Files\Chess\.cpp files</Filter>
     </ClCompile>
     <ClCompile Include="Pos2D.cpp">
-      <Filter>Source Files\GAMES\Chess\.cpp files</Filter>
-    </ClCompile>
-    <ClCompile Include="The_Maze.cpp">
-      <Filter>Source Files\GAMES\Maze</Filter>
+      <Filter>Source Files\Chess\.cpp files</Filter>
     </ClCompile>
     <ClCompile Include="Battleship.cpp">
-      <Filter>Source Files\GAMES\Battleship</Filter>
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="The_Maze.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Board.h">
-      <Filter>Source Files\GAMES\Chess\.h files</Filter>
+      <Filter>Source Files\Chess\.h files</Filter>
     </ClInclude>
     <ClInclude Include="Color.h">
-      <Filter>Source Files\GAMES\Chess\.h files</Filter>
+      <Filter>Source Files\Chess\.h files</Filter>
     </ClInclude>
     <ClInclude Include="Move.h">
-      <Filter>Source Files\GAMES\Chess\.h files</Filter>
+      <Filter>Source Files\Chess\.h files</Filter>
     </ClInclude>
     <ClInclude Include="Piece.h">
-      <Filter>Source Files\GAMES\Chess\.h files</Filter>
+      <Filter>Source Files\Chess\.h files</Filter>
     </ClInclude>
     <ClInclude Include="Pos2D.h">
-      <Filter>Source Files\GAMES\Chess\.h files</Filter>
-    </ClInclude>
-    <ClInclude Include="callChess.h">
-      <Filter>Source Files\GAMES\Chess</Filter>
+      <Filter>Source Files\Chess\.h files</Filter>
     </ClInclude>
     <ClInclude Include="TicTacToe.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Battleship.h">
-      <Filter>Source Files\GAMES\Battleship</Filter>
-    </ClInclude>
     <ClInclude Include="The_Maze.h">
-      <Filter>Source Files\GAMES\Maze</Filter>
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="callChess.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Battleship.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
